--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="home">Home</string>
     <string name="challenge">Challenges</string>
     <string name="following">Following</string>
-    <string name="favorites">Favorites</string>
+    <string name="trip_experiences">Uber Trip Experiences</string>
     <string name="store">Store</string>
     <string name="make_new_post">Respond to a Challenge...</string>
 
