--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="join_now">JOIN NOW</string>
     <string name="nearby">Nearby</string>
+    <string name="title_activity_uber_trip_experience">UberTripExperience</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
